# pay2slay2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.es.md  README.ja.md  README.md  README.pt.md  README.uk.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pay2slay.db  pyproject.toml  rclone.conf
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: akash-logs.yml  api-build.yml  api-deploy.yml  api-rollback.yml  banano-deploy.yml  ci.yml  deploy-akash.yml  rotate-akash-cert.yml  tflint.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 20250209_01_secure_config.py  20250925_01_add_settlement_and_cursor_fields.py  20250925_02_admin_audit.py  20250925_03_payout_idempotency.py  20250925_04_abuse_flags.py  20260212_01_donation_ledger.py  20260213_01_donation_sender_address.py  (+1 more)
configs/: integrations.yaml  payout.yaml  product.yaml
docs/: PRIVACY.es.md  PRIVACY.ja.md  PRIVACY.md  PRIVACY.pt.md  PRIVACY.uk.md  QUICKSTART_PLACEHOLDER.md  README.md  abuse.md  api.es.md  api.ja.md  api.md  api.pt.md  api.uk.md  data-model.md  distribution.md  perf-harness.md  provenance.md  quickstart.es.md  quickstart.ja.md  quickstart.md  quickstart.pt.md  quickstart.uk.md  research.md  runbook.md  sbom.md  secrets.md
prompts/: constitution.txt  plan.txt  specify.txt
scripts/: prune_data.py
static/: app.js  banana-rain.js  help-i18n.js  index.html  link-required.html  style.css
tests/: conftest.py
(+165 files in other folders)
