[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pay2slay"
version = "0.1.0"
description = "Pay2Slay Faucet: Banano payouts for Fortnite kills"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Community", email = "opensource@example.org" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "prometheus-client>=0.20",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-sdk>=1.25.0",
  "tenacity>=9.0",
  "python-dotenv>=1.0",
  "cryptography>=42.0",
  "ed25519-blake2b>=1.4",
  "bananopie>=0.0.2",
  "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "coverage[toml]>=7.6",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-PyYAML>=6.0",
  "httpx[http2]>=0.27",
  "pre-commit>=3.7",
  "jsonschema>=4.23",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E","F","I","N","UP","B","A","PL","RUF"]
ignore = ["E203","E266","E501","PLC0415"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
packages = ["src"]

[[tool.mypy.overrides]]
module = ["cryptography.*", "ed25519_blake2b", "dotenv", "bananopie", "nacl.*"]
ignore_missing_imports = true
